[tool.poetry]
name = "py-openaq"
version = "1.1.0"
description = "Python wrapper for the OpenAQ API"
authors = ["David H Hagan <david@davidhhagan.com>"] 
license = "MIT"
readme = "README.md"
repository = "https://github.com/dhhagan/py-openaq"
documentation = "http://dhhagan.github.io/py-openaq"
keywords = ['OpenAQ', 'MIT', 'Air Quality']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Atmospheric Science',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
packages = [
    {include = "openaq", from="."},
]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
coverage = "^5.5"
pandas = "^1.3.0"
seaborn = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
